karl package Changelog
======================

Unreleased
----------

- Fixed LP #877364:  tolerate 'macintosh' encoding (ancient OS9-ism) when
  converting HTML to text.

- Fixed LP #824631: Sped up search results involving a large time span
  (such as "past year") using a new kind of index with multiple levels
  of granularity. Also added an evolve script to perform the conversion.

- Show staff calendar tab

- Fixed LP #890419: show last modified not creator on search results

3.73 (2011-10-27)
-----------------

- Fixed LP #874519: Clicking 'More Events' Resets Layer Selection

- Fixed a series of IE bugs by restoring the doctype declaration
  at the top of every page.

3.72 (2011-09-29)
-----------------

- When doing the text indexing on files, text data is now re-extracted from
  files if the cached text is an empty string.  This allows for files
  previously indexed when an external converter was unavailable to be properly
  reindexed after the external converter is added to the system.

- When restoring an object from the trash, if a conflicting name is
  in the container, append a suffix to the name.  (LP #821206)

- Fixed a DST issue in the versions.format_local_date() function which
  formats a date for display in versioning UIs.

- Fixed the interpretation of message timestamps so that objects created
  through email will have the correct time.  Also, prefer to use the
  delivery timestamp provided by repoze.postoffice 0.17+. (LP #837699)

- Use modern SI prefixes for file size display.  (1 KB = 1000 bytes)

- Fix error in HTML text extractor causing it to fail if no character encoding
  was supplied via a <meta> content type tag. (LP #848194)

- Added versioning for the Files tool.

- Made the Trash folder aware of documents that may have been marked deleted in
  a folder because they were moved to another folder. Documents that are still
  accessible in some way are not displayed in the Trash view.  This is a
  workaround for LP #851118.
